# my_agent

./: .env.example  .gitignore  Procfile  README.md  langgraph.json  pyproject.toml  setup.sh
production/: api.Dockerfile  docker-compose.yml  requirements.txt  worker.Dockerfile
production/api/: dependencies.py  main.py
production/api/routes/: jobs.py  stream.py  ws.py
production/core/: config.py  redis_client.py
production/graph/: __init__.py
production/models/: job.py
production/services/: queue.py  state_store.py
production/tests/: test_integration.py
production/worker/: main.py  retry.py  runner.py
src/multi_agent_app/: __init__.py  configuration.py  graph.py  models.py  state.py
src/multi_agent_app/edges/: __init__.py  routing.py
src/multi_agent_app/nodes/: agent_node.py  chatter_node.py  contact_node.py  profile_node.py  supervisor_node.py
src/multi_agent_app/tools/: __init__.py  contact_tools.py  dummy_tool.py  profile_tools.py  rag_tools.py
tests/: test_graph.py
